--- a/package.json
+++ b/package.json
@@ -33,47 +33,29 @@
     "@polymer/iron-a11y-keys-behavior": "^3.0.0",
     "@polymer/iron-media-query": "^3.0.0",
     "@polymer/iron-resizable-behavior": "^3.0.0",
-    "@polymer/polymer": "^3.2.0",
+    "@polymer/polymer": "^3.0.0",
     "@vaadin/vaadin-button": "^2.4.0",
-    "@vaadin/vaadin-control-state-mixin": "^2.2.4",
-    "@vaadin/vaadin-element-mixin": "^2.4.2",
-    "@vaadin/vaadin-lumo-styles": "^1.6.1",
+    "@vaadin/vaadin-control-state-mixin": "^2.2.2",
+    "@vaadin/vaadin-element-mixin": "^2.4.1",
+    "@vaadin/vaadin-lumo-styles": "^1.6.0",
     "@vaadin/vaadin-material-styles": "^1.3.2",
-    "@vaadin/vaadin-overlay": "^3.5.1",
-    "@vaadin/vaadin-text-field": "^3.0.0",
-    "@vaadin/vaadin-themable-mixin": "^1.6.2",
-    "@vaadin/vaadin-icons": "^4.3.1"
+    "@vaadin/vaadin-overlay": "^3.5.0",
+    "@vaadin/vaadin-text-field": "^2.8.0",
+    "@vaadin/vaadin-themable-mixin": "^1.6.1"
   },
   "devDependencies": {
-    "@esm-bundle/chai": "^4.1.5",
-    "@open-wc/rollup-plugin-html": "^1.2.5",
-    "@open-wc/testing-helpers": "^1.8.0",
     "@polymer/iron-component-page": "^4.0.0",
-    "@polymer/iron-demo-helpers": "^3.0.0-pre.19",
+    "@polymer/iron-form": "^3.0.0",
+    "@polymer/iron-icon": "^3.0.0",
+    "@polymer/iron-icons": "^3.0.0",
+    "@polymer/iron-input": "^3.0.0",
     "@polymer/iron-test-helpers": "^3.0.0",
-    "@rollup/plugin-node-resolve": "^11.0.0",
-    "@vaadin/vaadin-dialog": "^2.5.1",
-    "@web/dev-server": "^0.0.19",
-    "@web/test-runner": "^0.9.7",
-    "@web/test-runner-saucelabs": "0.1.1",
-    "eslint": "^7.13.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "hermione": "^3.9.0",
-    "hermione-esm": "^0.4.0",
-    "hermione-sauce": "^0.1.0",
-    "husky": "^4.3.0",
-    "lint-staged": "^10.5.1",
-    "magi-cli": "^0.29.2",
-    "prettier": "^2.1.2",
-    "rimraf": "^3.0.2",
-    "rollup": "^2.34.1",
-    "rollup-plugin-terser": "^7.0.2",
-    "sinon": "^9.2.0",
-    "stylelint": "^13.7.2",
-    "stylelint-config-vaadin": "^0.2.6",
-    "typescript": "^4.0.5",
-    "webpack-cli": "^4.6.0"
+    "@vaadin/vaadin-custom-field": "^1.0.0",
+    "@polymer/iron-demo-helpers": "^3.0.0-pre.19",
+    "@vaadin/vaadin-icons": "^4.3.1",
+    "@vaadin/vaadin-dialog": "^2.2.1",
+    "sugar": "^2.0.0",
+    "wct-browser-legacy": "^1.0.1"
   },
   "scripts": {
     "test": "wct",
