--- a/package.json
+++ b/package.json
@@ -32,29 +32,29 @@
     "@polymer/iron-a11y-announcer": "^3.0.0",
     "@polymer/iron-a11y-keys-behavior": "^3.0.0",
     "@polymer/iron-media-query": "^3.0.0",
-    "@polymer/iron-resizable-behavior": "^3.0.0",
-    "@polymer/polymer": "^3.0.0",
-    "@vaadin/vaadin-button": "^2.4.0",
-    "@vaadin/vaadin-control-state-mixin": "^2.2.2",
-    "@vaadin/vaadin-element-mixin": "^2.4.1",
-    "@vaadin/vaadin-lumo-styles": "^1.6.0",
-    "@vaadin/vaadin-material-styles": "^1.3.2",
-    "@vaadin/vaadin-overlay": "^3.5.0",
-    "@vaadin/vaadin-text-field": "^2.8.0",
-    "@vaadin/vaadin-themable-mixin": "^1.6.1",
-    "@vaadin/vaadin-form-layout": "^2.3.0"
+    "@polymer/iron-resizable-behavior": "^3.0.1",
+    "@polymer/polymer": "^3.2.0",
+    "@vaadin/button": "^23.0.7",
+    "@vaadin/vaadin-control-state-mixin": "^21.0.5",
+    "@vaadin/component-base": "^23.0.7",
+    "@vaadin/vaadin-lumo-styles": "^23.0.7",
+    "@vaadin/vaadin-material-styles": "^23.0.7",
+    "@vaadin/vaadin-overlay": "^23.0.7",
+    "@vaadin/text-field": "^23.0.7",
+    "@vaadin/vaadin-themable-mixin": "^23.0.7",
+    "@vaadin/form-layout": "^23.0.7"
   },
   "devDependencies": {
     "@polymer/iron-component-page": "^4.0.0",
     "@polymer/iron-form": "^3.0.0",
-    "@polymer/iron-icon": "^3.0.0",
-    "@polymer/iron-icons": "^3.0.0",
-    "@polymer/iron-input": "^3.0.0",
+    "@polymer/iron-icon": "^3.0.1",
+    "@polymer/iron-icons": "^3.0.1",
+    "@polymer/iron-input": "^3.0.1",
     "@polymer/iron-test-helpers": "^3.0.0",
-    "@vaadin/vaadin-custom-field": "^1.0.0",
+    "@vaadin/custom-field": "^23.0.7",
     "@polymer/iron-demo-helpers": "^3.0.0-pre.19",
-    "@vaadin/vaadin-icons": "^4.3.1",
-    "@vaadin/vaadin-dialog": "^2.2.1",
+    "@vaadin/icons": "^23.0.7",
+    "@vaadin/dialog": "^23.0.7",
     "sugar": "^2.0.0",
     "wct-browser-legacy": "^1.0.1"
   },
