migrate to Vaadin 24

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vaadin-component-factory/vcf-date-range-picker",
-  "version": "4.9.3",
+  "version": "5.0.0",
   "description": "Polymer element providing a date range selection field with scrollable month calendar",
   "main": "vcf-date-range-picker.js",
   "repository": {
@@ -33,28 +33,29 @@
     "@polymer/iron-a11y-keys-behavior": "^3.0.0",
     "@polymer/iron-media-query": "^3.0.0",
     "@polymer/iron-resizable-behavior": "^3.0.1",
-    "@polymer/polymer": "^3.2.0",
-    "@vaadin/button": "^23.0.7",
+    "@polymer/polymer": "^3.3.0",
+    "@vaadin/button": "^24.2.0",
+    "@vaadin/component-base": "^24.2.0",
+    "@vaadin/form-layout": "^24.2.0",
+    "@vaadin/overlay": "^24.2.0",
+    "@vaadin/polymer-legacy-adapter": "^24.2.2",
+    "@vaadin/text-field": "^24.2.0",
     "@vaadin/vaadin-control-state-mixin": "^21.0.5",
-    "@vaadin/component-base": "^23.0.7",
-    "@vaadin/vaadin-lumo-styles": "^23.0.7",
-    "@vaadin/vaadin-material-styles": "^23.0.7",
-    "@vaadin/vaadin-overlay": "^23.0.7",
-    "@vaadin/text-field": "^23.0.7",
-    "@vaadin/vaadin-themable-mixin": "^23.0.7",
-    "@vaadin/form-layout": "^23.0.7"
+    "@vaadin/vaadin-lumo-styles": "^24.2.0",
+    "@vaadin/vaadin-material-styles": "^24.2.0",
+    "@vaadin/vaadin-themable-mixin": "^24.2.0"
   },
   "devDependencies": {
     "@polymer/iron-component-page": "^4.0.0",
+    "@polymer/iron-demo-helpers": "^3.0.0-pre.19",
     "@polymer/iron-form": "^3.0.0",
     "@polymer/iron-icon": "^3.0.1",
     "@polymer/iron-icons": "^3.0.1",
     "@polymer/iron-input": "^3.0.1",
     "@polymer/iron-test-helpers": "^3.0.0",
-    "@vaadin/custom-field": "^23.0.7",
-    "@polymer/iron-demo-helpers": "^3.0.0-pre.19",
-    "@vaadin/icons": "^23.0.7",
-    "@vaadin/dialog": "^23.0.7",
+    "@vaadin/custom-field": "^24.2.0",
+    "@vaadin/dialog": "^24.2.0",
+    "@vaadin/icons": "^24.2.0",
     "sugar": "^2.0.0",
     "wct-browser-legacy": "^1.0.1"
   },
